infrastructure/ingress/traefik-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-dashboard
  namespace: traefik
spec:
  redirectRegex:
    regex: "^https?://[^/]+/$"
    replacement: "https://traefik.torsteinbo.net/dashboard/"
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - websecure
  tls:
    secretName: traefik-tls
  routes:
    - match: Host(`traefik.torsteinbo.net`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: redirect-to-dashboard
      services:
        - name: api@internal
          kind: TraefikService
